--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,12 @@ language: python
 python:
   - "2.7"
   - "3.6"
-  - "3.7"
   - "pypy3.5"
 install:
   - pip install -r requirements.txt
   - python setup.py install
   - pip install coveralls
 script:
-  - coverage run --source=swine setup.py
+  - coverage run --source=swine setup.py test
 after_success:
-- coveralls
+  - coveralls
