--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ glutin = "0.20.0"
 gl = "0.11.0"
 # Physics
 # ncollide3d = "0.18.4"
-# nalgebra = "0.17.3"
+nalgebra = "0.17.3"
 # nphysics3d = "0.10.3"
 # Python
 # pyo3 = "0.6.0-alpha.4"
